{
    "name": "InputMaster",
    "maps": [
        {
            "name": "ArcadeStick Controls",
            "id": "cc939ec3-9a0e-4aaa-b652-713b2b38bd34",
            "actions": [
                {
                    "name": "Stick Action",
                    "type": "PassThrough",
                    "id": "25569e3d-7117-40b9-8e99-192c8f5e2172",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonSquare Action",
                    "type": "Button",
                    "id": "f8a6aee3-41f1-4100-99b1-af2ea9d3815c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonTriangle Action",
                    "type": "Button",
                    "id": "75af7831-ac88-42d1-b303-10a5aae23a6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonCross Action",
                    "type": "Button",
                    "id": "4eb57d38-a122-44a6-8b7c-2924f6723f9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonCircle Action",
                    "type": "Button",
                    "id": "6347caf3-626b-4e50-9e30-ce55915eded9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonR1 Action",
                    "type": "Button",
                    "id": "e53d73bc-2796-4c18-81eb-b2e47cfce979",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonR2 Action",
                    "type": "Button",
                    "id": "9e57bf97-b764-4cbf-86d7-cd4338c23350",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonL1 Action",
                    "type": "Button",
                    "id": "bb59ab99-70ca-41ca-a855-d47d8e988427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonL2 Action",
                    "type": "Button",
                    "id": "4cda9715-ce0e-4ffb-bdef-4552f124af7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonStart Action",
                    "type": "Button",
                    "id": "fda1094a-7921-4201-8937-d316b21e6fe4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bfc6f371-0da5-4bb0-bcf5-776fa8e77032",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/hat",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "Stick Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df2c5e74-2aa8-4130-9092-974ecdce30b2",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Stick Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "244f4cdb-ac7b-49d6-bfb3-7fc45aee053f",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonSquare Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30fe1913-57dc-484b-92e2-8342913529a5",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonSquare Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d803ea6-2d4d-4641-b01e-e19358f46653",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonTriangle Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7526e050-69e6-482e-bfd3-3b7355d50d30",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonTriangle Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "433d74ce-b6e8-40cf-bcc2-e646d91b878c",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonCross Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e0feb29-5bff-47ab-89ae-e5c50bf5c6b0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonCross Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b8451a4-5170-477a-a928-c5a452fb975f",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonCircle Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "662504d8-e5d1-4b72-b2ad-aef9b75662cb",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonCircle Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af2ed8da-ece9-43b2-a491-fba437e0f4c8",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonR1 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38533e87-3daa-4f6c-82b4-5a420e6a2d17",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonR1 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd63ac04-981b-4f17-a4d8-77723d606b1f",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonR2 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "174554f9-197f-4d62-9aee-369a90409218",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonR2 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dbafd8e-3110-452b-9fff-68e663ced3bb",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonL1 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "919392ca-91fb-4e13-8c4c-53fcab6c104f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonL1 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc9f2f96-050c-4a8b-8f71-67ab2c0f184d",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonL2 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2827230-fa25-4dcb-bfcc-dfe06e112a9a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonL2 Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "152e8ede-82a8-4c2e-85d8-c67cbd44339d",
                    "path": "<HID::HORI CO.,LTD. Real Arcade Pro.4>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "RAP4 Control Scheme",
                    "action": "ButtonStart Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50013c7e-2ccf-487c-8013-22d73f69b1cb",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonStart Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "RAP4 Control Scheme",
            "bindingGroup": "RAP4 Control Scheme",
            "devices": [
                {
                    "devicePath": "<HID::HORI CO.,LTD. Real Arcade Pro.4>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}